@@ -18,6 +18,8 @@ Post-v2.6.0
        command or the ovn-ctl "--db-sb-create-insecure-remote" and
        "--db-nb-create-insecure-remote" command-line options for
        information regarding remote connection configuration.
+     * New appctl "inject-pkt" command in ovn-controller that allows
+       packets to be injected into the connected OVS instance.
    - Fixed regression in table stats maintenance introduced in OVS
      2.3.0, wherein the number of OpenFlow table hits and misses was
      not accurate.
